<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">SAM III PeakAbout III</string>
    <string name="app_version">app_version</string>
    <string name="send">보낸다.</string>
    <string name="not_connected">장비와 연결되지 않았습니다.</string>
    <string name="bt_not_enabled_leaving">블루투스를 사용 할 수 없습니다.</string>
    <string name="title_connecting">연결중...</string>
    <string name="title_connected_to"><xliff:g id="device_name">%1$s</xliff:g>와(과) 연결되었습니다.</string>
    <string name="title_not_connected">연결 되지 않았습니다.</string>
    <string name="scanning">주위 장비를 찾는 중...</string>
    <string name="select_device">연결할 장비를 선택합니다.</string>
    <string name="none_paired">연결되었던 장비가 없습니다.</string>
    <string name="none_found">아무 장비도 찾지 못하였습니다.</string>
    <string name="title_paired_devices">연결되었던 장비들</string>
    <string name="title_other_devices">가능한 다른 장비들</string>
    <string name="button_scan">주위 장비를 찾는다.</string>
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="pleaseWait">기다려 주세요.</string>
    <string name="makingConnectionString">Making Connection String</string>
    <string name="gam_thre_normal">Normal</string>
    <string name="main_menu1">블루투스</string>
    <string name="main_menu1_1">맵핑 서버</string>
    <string name="main_menu2">설정  &amp; 이벤트</string>
    <string name="main_menu3">종료</string>
    <string name="bg_cali">자연 방사선 &amp; 채널 교정</string>
    <string name="measurement_progress">Measurement in progress...</string>
    <string name="Calib_time">Calibration measurement time</string>
    <string name="IsoLib_list">IsoLib_list</string>
    <string name="First_Install">First_Install</string>
    <string name="healthy_threshold">healthy_threshold</string>
    <string name="Paired">연결된 장비</string>
    <string name="Send_xml">Send file</string>
    <string name="login">로그인</string>
    <string name="library">핵종 라이브러리</string>
    <string name="sam_battery">SAM 배터리</string>
    <string name="neutron">중성자</string>
    <string name="alarm_mode">경보 방식</string>
    <string name="setup_title_user">사용자명</string>
    <string name="setup_summary_user">사용자의 이름을 설정합니다.</string>
    <string name="setup_title_search_location">측정 장소</string>
    <string name="setup_summary_search_location">측정 장소를 기입합니다.</string>
    <string name="setup_title_alarm_mode">감마 경보 방식을 설정합니다.</string>
    <string name="setup_summary_alarm_mode">감마 경보 방식 및 기준치를 설정합니다.</string>
    <string name="setup_title_neu_threshold">중성자 경보 기준치</string>
    <string name="setup_summary_neu_threshold">중성자 경보 기준치를 설정합니다.(CPS)</string>
    <string name="setup_title_health_thre">인체 위험 경보</string>
    <string name="setup_summary_health_thre">인체 위험 경보 수위를 설정합니다.(uSv/h)</string>
    <string name="setup_title_ringtone">경보음</string>
    <string name="setup_summary_ringtone">경보음을 지정합니다.</string>
    <string name="alarm">경보</string>
    <string name="background_measurement">백그라운드 측정</string>
    <string name="setup_title_bg">측정 시간</string>
    <string name="setup_summary_bg">측정 완료 시간을 설정합니다.</string>
    <string name="calibration">채널 교정</string>
    <string name="setup_title_cali">채널 교정 카운트</string>
    <string name="setup_summary_cali">채널 교정 완료 카운트를 설정합니다. (단위: n x 1000)</string>
    <string name="setup_title_lib">핵종 라이브러리</string>
    <string name="setup_summary_lib">핵종 라이브러리를 선택합니다.</string>
    <string name="unit">단위</string>
    <string name="setup_title_dr_unit">방사선량 단위</string>
    <string name="setup_summary_dr_unit">방사선량 단위를 지정합니다.</string>
    <string name="about">프로그램 대하여</string>
    <string name="setup_title_device_info">시스템 정보</string>
    <string name="setup_summary_device_info">소프트웨어와 검출 장비 정보</string>
    <string name="setup_title_sw_version">소프트웨어 버젼</string>
    <string name="setup_title_login_info">최근 사용 정보</string>
    <string name="setup_title_last_login">최근 사용자</string>
    <string name="setup_title_last_login_date">최근 사용 일시</string>
    <string name="setup_title_last_paired">최근 연결된 장비</string>
    <string name="admin_pw">관리자 암호</string>
    <string name="password">암호</string>
    <string name="setup_title_fix_alarm">고정식 경보</string>
    <string name="setup_summary_fix_alarm">고정식 경보의 기준치를 설정하고 사용합니다. (CPS)</string>
    <string name="setup_title_var_alarm">유동식 경보</string>
    <string name="setup_summary_var_alarm">유동식 경보의 기준치를 설정하고 사용합니다. (Sigma)</string>
    <string name="setup_summary_disc">디스크리미네이션을 설정 합니다.</string>
    <string name="setup_summary_low_disc">Setup Low Discrimination</string>
    <string name="setup_summary_upper_disc">Setup Upper Discrimination</string>
    <string name="setup_title_default_time">기본 측정 시간</string>
    <string name="setup_summary_default_time">측정 시작시 나타나는 기본 측정 시간을 설정합니다. (초)</string>
    <string name="setup_title_time_adjust">실시간 측정 시간 조정</string>
    <string name="setup_summary_time_adjust">측정 중 실시간으로 조정 할 수 있는 측정 시간을 설정합니다. (초)</string>
    <string name="setup_title_sequence_mode">Sequential Mode</string>
    <string name="setup_summary_sequence_mode">Sequential Mode On/Off</string>
    <string name="setup_title_seq_measurement_time">Measurement Time</string>
    <string name="setup_summary_seq_measurement_time">Setup Measurement Time (sec)</string>
    <string name="setup_title_seq_pause_time">Pause time</string>
    <string name="setup_summary_seq_pause_time">Setup Pause Time between Measurements (sec)</string>
    <string name="setup_title_sequence_mode_repeat">Number of Measurements</string>
    <string name="setup_summary_sequence_mode_repeat">Setup Number of Measurements</string>
    <string name="not_found_calibration">채널 교정에 대한 정보를 찾을 수 없습니다. 채널 교정을 수행 해주세요.</string>
    <string name="auto_cali_success">자동 교정이 성공적으로 이루어졌습니다.</string>
    <string name="auto_cali_fail">자동 교정에 실패하였습니다.</string>
    <string name="auto_cali_gain_shift">Gain shift is out of bound. Please redo CALIBRATION.</string>
    <string name="auto_cali_2nd_fail">두번째 자동 교정에 실패 하였습니다. 채널 교정을 수행 해주세요.</string>
    <string name="auto_cali_k40_insufficient">Auto Calibration failed: K-40 peak count is insufficient. 2nd Auto Calibration in progress</string>
    <string name="not_event_file">이벤트 파일 (ANSI42)이 아닙니다.</string>
    <string name="load_event_file">다른 이벤트...</string>
    <string name="write_db">이벤트를 기록했습니다.</string>
    <string name="wait_while_connect">연결하는 동안 기다려주세요...</string>
    <string name="energy_calibration">Energy Calibration</string>
    <string name="now_running">현재 측정중...</string>
    <string name="s_user">사용자</string>
    <string name="admin">관리자</string>
    <string name="fixed">고정</string>
    <string name="variable">유동</string>
    <string name="gauge">Gauge</string>
    <string name="finder">Finder</string>
    <string name="alarm_duration">경과 시간</string>
    <string name="avg_doserate">평균 선량</string>
    <string name="avg_neutron">평균 중성자량</string>
    <string name="max_doserate">최고 선량</string>
    <string name="max_neutron">최고 중성자량</string>
    <string name="radionuclide_id">검출된 핵종</string>
    <string name="video">영상</string>
    <string name="photo">사진</string>
    <string name="rec">녹음</string>
    <string name="close">닫기</string>
    <string name="acq_time">경과 시간</string>
    <string name="avg_cps">평균 CPS</string>
    <string name="total_count">총 카운트</string>
    <string name="sec">초</string>
    <string name="confidence_level">신뢰율</string>
    <string name="dose_rate">선량</string>
    <string name="s_location">장소</string>
    <string name="date">날짜</string>
    <string name="time">시간</string>
    <string name="cps">초당 카운트</string>
    <string name="cancel">취소</string>
    <string name="success">성공</string>
    <string name="not_success">실패</string>
    <string name="failed">실패</string>
    <string name="nuclide">핵종</string>
    <string name="photo_and_video">사진과 영상</string>
    <string name="event_id">핵종 분석</string>
    <string name="event_info">이벤트 정보</string>
    <string name="photo_video">사진/영상</string>
    <string name="event">이벤트</string>
    <string name="comment">비고</string>
    <string name="u_information">상세 정보</string>
    <string name="latitude">위도</string>
    <string name="longitude">경도</string>
    <string name="detected_nuclide">검출된 핵종</string>
    <string name="auto_cali_progress">자동 교정 중...</string>
    <string name="setup">설정</string>
    <string name="event_log">이벤트</string>
    <string name="event_analysis">이벤트 분석</string>
    <string name="iso_identification">실시간 핵종 분석</string>
    <string name="activity">선량</string>
    <string name="transmit">전송</string>
    <string name="transmit_N42">N42 파일 전송</string>
    <string name="send_toRCBCenter_event1">Reach-back center로 </string>
    <string name="send_toRCBCenter_event2">를 전송 하시겠습니까?</string>
    <string name="send_toRCBCenter_event3">를 재전송 하시겠습니까?</string>
    <string name="send_toRCBCenter_event">Reach-back center로 이벤트를 전송 하시겠습니까?</string>
    <string name="receive_email_address">받는 메일 : </string>
    <string name="siren">사이렌</string>
    <string name="morning_call">모닝콜</string>
    <string name="door_bell">초인종</string>
    <string name="trumpet">금관악기</string>
    <string name="telephone_ring">전화젤</string>
    <string name="beep">비프</string>
    <string name="background">자연 방사선 측정</string>
    <string name="s_calibration">채널 교정</string>
    <string name="manual_identification">수동 핵종 분석</string>
    <string name="login_user">일반 사용자</string>
    <string name="discrimination">Discrimination</string>
    <string name="low_discrimination">Low Discrimination</string>
    <string name="upper_discrimination">Upper Discrimination</string>
    <string name="setup_title_export_event">이벤트 내보내기</string>
    <string name="setup_summary_export_event">E-mail을 이용해 이벤트(N42)를 내보냅니다.</string>
    <string name="eventlog_load_failed">마지막 데이터 입니다.</string>
    <string name="e_mail">이메일</string>
    <string name="e_mail_account">이메일 계정</string>
    <string name="sender_email_address">보내는 메일</string>
    <string name="recv_email_address">받는 메일</string>
    <string name="address">주소</string>
    <string name="server">서버</string>
    <string name="port">포트</string>
    <string name="email_transmit_success">전송 성공</string>
    <string name="email_transmit_failed">전송 실패</string>
    <string name="email_transmit_error">데이터 저장중에 오류가 발생하였습니다.\n 설정-이벤트로그 메뉴에서 전송 부탁드립니다.</string>
    <string name="email_transmit_pic_error">사진파일 저장중 오류가 발생하여 \n사진파일없이 리치백서비스 실행되었습니다.\n사진파일 첨부 원할 시 : 설정-이벤트로그 메뉴에서 전송 부탁드립니다.</string>
    <string name="down_new_version">SAM III SW 업그레이드</string>
    <string name="down_new_version_summary">최신 SAM III SW를 다운로드 합니다.</string>
    <string name="reachback">리치백</string>
    <string name="measurement">측정</string>
    <string name="calibration_measurement">채널 교정을 시작합니다.</string>
    <string name="user_settings">사용자 설정</string>
    <string name="administrator_access">관리자만 접근 가능</string>
    <string name="administrator_settings">관리자 메뉴</string>
    <string name="p_user_settings">p_user_settings</string>
    <string name="p_admin">p_admin</string>
    <string name="menu_enable_key">menuEnableKey</string>
    <string name="Connect_Mode">연결 모드</string>
    <string name="Setup_Connect_Mode">연결 방식을 설정합니다.</string>
    <string name="Setup_Instrument_Key">Setup_Instrument_Key</string>
    <string name="Setup_Instrument_Title">장비 정보</string>
    <string name="Setup_Instrument_Surmary">장비 정보를 입력합니다.</string>
    <string name="Setup_Instrument_Default">SAM950</string>
    <string name="System_Log_Transfer">오류 전송</string>
    <string name="System_Log_Transfer_title">디버그</string>
    <string name="System_Log_Transfer_Key">System logo transfer Key</string>
    <string name="reset_Calibartion_key">reset_Calibartion_key</string>
<string name="reset_Calibartion_sub_title">Calibration configuration update</string>
    <string name="reset_Calibartion_title_summary">Calibration configuration update</string>
</resources>