<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!--
<item
        android:id="@+id/bluetooth_Menu"
        android:alphabeticShortcut="a"
        android:title="@+string/Connect_Option">

     <menu>
        <item
            android:id="@+id/bluetooth_Menu1"
            android:title="@string/main_menu1"/>
        <item
            android:id="@+id/Usb_Connect"
            android:title="@string/Usb_Connect_Option"/>
    </menu>  
</item>
    <item
        android:id="@+id/submenu"
        android:title="@+string/main_menu2">
        <menu>
    -->


 <!-- <item
            android:id="@+id/bluetooth_Menu1"
            android:title="@string/main_menu1"/> -->



    <item
        android:id="@+id/db_Menu"
        android:title="@string/event_log"/>

    <item
        android:id="@+id/rdb_Menu"
        android:title="@string/reachback"/>

    <item
        android:id="@+id/setup_Menu"
        android:title="@string/setup"/>

    <!--
    </menu>
    </item>
    -->
    <item
        android:id="@+id/Finish_Menu"
        android:title="@string/main_menu3">
    </item>

</menu>